# UdemyCppPro

Chapter01/: Makefile  main
Chapter02/2_BasicStructure/: main
Chapter02/3_CompilerFlags/: main
Chapter02/4_WildcardFiles/: Makefile  main
Chapter02/5_MakefileTemplate/: Makefile
Chapter02/6_BetterMakefileTemplate/: Makefile
Chapter03/01_HelloWorld/: CMakeLists.txt
Chapter03/03_IntermediateProject/app/: CMakeLists.txt
Chapter03/04_VariablesOptions/: CMakeLists.txt
Chapter03/06_BetterProject/src/my_lib/: CMakeLists.txt
Chapter03/08_FetchContent/: CMakeLists.txt
Chapter03/10_UnitTest/src/my_lib/: my_lib.cc
Chapter03/10_UnitTest/tests/: CMakeLists.txt
